--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog",
   "type": "module",
   "version": "5.5.1",
+  "packageManager": "npm@11.8.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro check && astro build && pagefind --site dist && cp -r dist/pagefind public/",
