--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
+    "astro-mermaid": "^1.3.1",
     "dayjs": "^1.11.19",
     "lodash.kebabcase": "^4.1.1",
+    "mermaid": "^11.12.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "remark-collapse": "^0.1.2",
